# ai-shell-agent

./: .env.example  pyproject.toml  requirements.txt  setup.py
ai_shell_agent/: ai.py  chat_manager.py  llms.py  logger.py  tools.py  utils.py
