[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-shell-agent"
version = "0.1.6"
description = "A command-line AI chat application that helps perform tasks by writing and executing terminal commands with user supervision and by answering questions."
authors = [
    { name = "Lael Al-Halawani", email = "laelhalawani@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<4.0"
dynamic = ["classifiers", "dependencies"]

[project.scripts]
ai = "ai_shell_agent.ai:main"

[project.urls]
"Homepage" = "https://github.com/laelhalawani/ai-shell-agent"

[tool.setuptools]

[tool.poetry.dependencies]
langchain-google-genai = "^2.0.11"
python-dotenv = "1.0.1"
langchain-openai = "0.3.2"
langchain-experimental = "0.3.4"
prompt-toolkit = "3.0.50"
pytest = "^8.3.4"
colorama = "0.4.6"
